Moves to custom JSONKit to hopefully compile with Xcode 8.

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git://github.com/gradha/facebook-ios-sdk.git
 [submodule "JSONKit"]
 	path = Submodules/JSONKit
-	url = git://github.com/johnezang/JSONKit.git
+	url = git://github.com/gradha/JSONKit.git
